# python_hindi

./: CODE_OF_CONDUCT.md  LICENCE  README.md  pyproject.toml
examples/: for-loop.pyhi  if-else.pyhi  while.pyhi
python_hindi/: hindi_data.py  hook.py
