[tool.poetry]
name = "python_hindi"
version = "0.1.0"
description = "Python in Hindi"
authors = ["Karan Singh"]
license = "BSD-4-Clause"
readme = "README.md"
homepage = "https://github.com/itsrealkaran/python-hindi"

[tool.poetry.dependencies]
python = "^3.6"
ideas = "^0.0.22"
friendly-traceback = { version ="^0.4.36",optional = true}

[tool.poetry.extras]
errors = ["friendly", "friendly-traceback"]

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
pyhi = 'python_hindi.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/itsrealkaran/python-hindi/issues"
